# sailfish-settings-accounts-extensions-telegram

./: CMakeLists.txt  extensions-telegram.pro  telegram.provider  telegram.service
.github/ISSUE_TEMPLATE/: bug_report.md
rpm/: sailfish-settings-accounts-extensions-telegram.spec
scripts/: telegram-qt-tool
tools/: telegram-qt-tool
ui/: TelegramAddAccount.qml  TelegramSettingsDisplay.qml  telegram-settings.qml  telegram-update.qml  telegram.qml
ui/telegram/: AboutPage.qml  AccountSettings.qml  AccountSettingsPage.qml  Client.qml  CollapsibleColumn.qml  EnterCode.qml  EnterName.qml  EnterPassword.qml  EnterPhone.qml  NetworkSettings.qml  NetworkSettingsPage.qml  SuccessBusyPage.qml  WizardPage.qml  WizardPageContent.qml
